--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,23 @@
 # Base configuration
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-markdown: kramdown
-highlighter: rouge
+#markdown: kramdown
+markdown: redcarpet
 
-collections:
-  pages:
-    output: true
-    permalink: /:path/
+permalink: pretty
+highlighter: rouge
+incremental: true
+
+sass:
+  style: :compressed
+
+#collections:
+#  pages:
+#    output: true
+#    permalink: /:path/
 
 # Title
 name: Atos Cloud
-subtitle: Cloud Strategy & Vision
+subtitle: Atos Cloud Documentation Guide
 
 # When using this template with a project page set the baseurl to '/project-name'
 # For user/organization pages set this to an empty string
@@ -29,6 +36,10 @@ author:
 logourl: /assets/img/Canopy-logo.png
 logoalt: Canopy, The Atos Cloud logo
 
+# To expand all navigation bar entries by default, set this property to true:
+expand_nav: true
+
+
 # Navigation
 # List links that should appear in the site sidebar here
 navigation:
@@ -41,16 +52,18 @@ navigation:
 - text: Example Page
   url: example_page/
   internal: true
-- text: DOCter Repo
-  url: https://github.com/cfpb/DOCter
+- text: Atos Cloud Strategy Repo
+  url: https://github.com/DarrenRatcliffe/Atos-Cloud-Strategy
   internal: false
+
+
 
 # Repo list
 # List repos that you would like to appear on the homepage here
-repos:
-- name: DOCter
-  description: Jekyll template for docs
-  url: https://github.com/cfpb/DOCter
+#repos:
+#- name: Atos Cloud Doc Template Guide
+#  description: Jekyll template for docs guide
+#  url: https://github.com/DarrenRatcliffe/Atos-Cloud-Doc-Template
 
 # Style Variables
 brand_color: "#0066a1"
